# GraphNLP-Intel

./: .env.example  .gitignore  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml
config/: default.yaml  email.yaml  feedback.yaml  finance.yaml
docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
docs/: sdk_guide.md
graphnlp/: __init__.py  cli.py  config.py  pipeline.py
graphnlp/adapters/: base.py  email.py  feedback.py  finance.py  incidents.py
graphnlp/api/: app.py  deps.py
graphnlp/api/auth/: api_keys.py
graphnlp/api/middleware/: rate_limit.py  tenant.py
graphnlp/api/routes/: analyze.py  graph.py  health.py  stream.py  webhooks.py
graphnlp/extraction/: embeddings.py  ner.py  relations.py
graphnlp/graph/: builder.py  community.py  diff.py  gnn.py
graphnlp/ingestion/: chunker.py  email_parser.py  loader.py  stream.py
graphnlp/queue/: tasks.py  worker.py
graphnlp/storage/: base.py  neo4j_store.py  redis_cache.py
graphnlp/viz/: d3_export.py  pyvis_renderer.py
graphnlp/webhooks/: dispatcher.py
graphnlp_intel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: run_worker.sh  setup_dev.sh
sdk/js/: package.json
sdk/js/src/: index.ts
sdk/python/: setup.py
sdk/python/graphnlp_client/: __init__.py  client.py
terraform/: main.tf
tests/: conftest.py
tests/fixtures/: sample_emails.json  sample_finance.csv
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_adapters.py  test_extraction.py  test_graph.py  test_ingestion.py
